--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <ul class="feature-list">
                     <li><i>Компактность</i> - около 50кб, нет дополнительных зависимостей.</li>
                     <li><i>Простота</i> - не нужно учить лишнее. Инициализация: от 1 строки кода.</li>
-                    <li><i>Надеждность</i> - SQL запросы проверяются на момент старта приложения.</li>
+                    <li><i>Надежность</i> - SQL запросы проверяются на момент старта приложения.</li>
                     <li><i>Гибкость</i> - доступ к низкоуровневому функционалу JDBC.</li>
                     <li><i>Производительность</i> - нет дополнительных вычислительных расходов по сравнению с JDBC.</li>
                     <li><i>Транзакционность</i> - методы могут выполнять роль транзакций.</li>
-                    <li><i>Скорость</i> - SQL соедиенение открывается в момент исполнения первого реального запроса.</li>
+                    <li><i>Скорость</i> - SQL соединение открывается в момент исполнения первого реального запроса.</li>
                     <li><i>Расширяемость</i> - регистрация новых типов данных, переопределение существующих.</li>
                     <li><i>Профилировка</i> - доступ метрикам исполнения запросов и транзакций.</li>
                     <li><i>Открытость</i> - открытый исходный код: возможность изменять и исправлять.</li>
@@ -184,10 +184,10 @@ Map&lt;Method, DbTimer&gt; getTimers()</pre>
                 </ul>
                 <p>
                     Каждый метод интерфейса представляет из себя отдельную транзакцию: метод <i>commit</i> для транзакции вызывается при успешном завершении метода.
-                    Метод <i>rollback</i>, если имплементация производит исключение.
+                    Метод <i>rollback</i> - если имплементация производит исключение.
                 </p>
                 <p>
-                    В случае, если из один транзакционный метод вызывает другой транзакционный метод, новой транзакции не создается.
+                    В случае, если один транзакционный метод вызывает другой транзакционный метод, новой транзакции не создается.
                     Вызванный метод становится частью верхнеуровневой транзакции.
                 </p>
                 <p>
