--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Map&lt;Method, DbTimer&gt; getTimers()</pre>
                 </p>
                 <ul class="spec-list">
                     <li>Создать обычный Java интерфейс, где каждый метод будет соответствовать одному SQL запросу.</li>
-                    <li>Написать для каждого метода реальный SQL запрос на языке поддерживаемым используемой базой данных и поместить этот запрос в виде аннотации <i>@Sql</i> к методу.</li>
+                    <li>Написать для каждого метода реальный SQL запрос на языке используемой базы данных и поместить этот запрос в виде аннотации <i>@Sql</i> к методу.</li>
                     <li>Привязать параметры Java метода к параметрам SQL запроса используя <i>@Bind</i> и <i>@BindBean</i> аннотации.</li>
                     <li>Получить имплементацию описанного интерфейса у mJDBC.</li>
                 </ul>
@@ -320,7 +320,7 @@ public interface DbBinder&lt;T&gt; {
                     В текущей версии mJDBC параметр описанный при помощи <i>@BindBean</i> должен быть единственным параметром интерфейса.
                 </p>
                 <p>
-                    В случае, если SQL запрос содержит больше именованных параметров, чем доступно при из данных <i>@Bind</i> и <i>@BindBean</i> аннотаций,
+                    В случае, если SQL запрос содержит больше именованных параметров, чем доступно из данных <i>@Bind</i> и <i>@BindBean</i> аннотаций,
                     производится исключение. Лишние параметры со стороны Java игнорируются. Имена параметров могут содержать только символы Java идентификаторов.
                 </p>
                 <p>Проверка на полноту и корректность SQL параметров происходит в момент регистрации SQL-интерфейса.</p>
@@ -330,7 +330,7 @@ public interface DbBinder&lt;T&gt; {
             <section id="Mappers" class="group">
                 <h3>SQL результаты</h3>
                 <p>
-                    mJDBC необходимо знать каким образом преобразовывать возвращаемые SQL интерфейсом значния в Java объекты.
+                    mJDBC необходимо знать каким образом преобразовывать возвращаемые SQL интерфейсом данные в Java объекты.
                     По умолчанию mJDBC поддерживает все примитивные Java типы и их объектные аналоги, типы <i>java.sql.Date</i>, <i>java.sql.Timestamp</i>, <i>java.util.Date</i>,
                     <i>java.math.BigDecimal</i> и интерфейс списков <i>java.util.List</i>. Для списков в качестве реализации используется <i>java.util.ArrayList</i>.
                 </p>
@@ -478,7 +478,7 @@ public interface DbOpNN&lt;T&gt; {
                     </p>
                     <ul class="spec-list">
                         <li>Работа с именованными параметрами.</li>
-                        <li>Проверка коррекности привязки параметров на момент создания.</li>
+                        <li>Проверка корректности привязки параметров на момент создания.</li>
                         <li>Отображения результатов в Java объекты при помощи <i>DbMapper</i>.</li>
                         <li>Автоматическое освобождение ресурсов при завершении транзакции/соединения.</li>
                     </ul>
